# bitmark

./: .gitignore  COPYING  INSTALL  Makefile.am  README.md  bitmark-qt.pro  configure.ac  rel-files  vimver
contrib/: README.md  bitmark-qt.pro  bitmarkd.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  bitmark-qt.desktop  bitmark-qt.install  bitmark-qt.lintian-overrides  bitmark-qt.protocol  bitmarkd.bash-completion  bitmarkd.examples  bitmarkd.install  bitmarkd.lintian-overrides  bitmarkd.manpages  changelog  control  copyright  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-osx-bitcoin.yml  gitian-osx-bitmark.yml  gitian-osx-depends.yml  gitian-win.yml  qt-linux.yml  qt-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: DS_Store  README.md  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  example-config.cfg  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py  gen_base58_test_vectors.py
contrib/verifysfbinaries/: verify.sh
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  bootstrap.md  build-msw.md  build-osx.md  build-unix.md  coding.md  gitian-building.md  gitian-howto.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-bitmarkd-for-test.sh.in
share/: genbuild.sh  setup.nsi  setup.nsi.in  ui.rc
src/: DoS_tests.cpp  Lyra2RE.c  Makefile.am  Makefile.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.cpp  base58.h  bignum.h  bitmark-cli-res.rc  bitmark-cli.cpp  bitmark-config.h  bitmarkd-res.rc  bitmarkd.cpp  bloom.cpp  bloom.h  build.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  cryptocommon.h  cryptonight.h  db.cpp  db.h  equihash.cpp  equihash.h  (+64 more)
src/bmw/: BlueMidnightWish.c  BlueMidnightWish.h
src/compat/: glibc_compat.cpp
src/cryptonight/: aesb-x64.S  c_groestl.h  c_jh.h  c_keccak.c  c_keccak.h  c_skein.h  compat.h  cryptonight.c  cryptonight.h  cryptonight_aesni.c  cryptonight_common.c  cryptonight_lobotomized.c  hash-ops.h  oaes_lib.c  oaes_lib.h  skein_port.h
src/cryptonight/common/: c_keccak.c
src/cryptonight/crypto/: hash-ops.h  hash.c  skein_port.h  slow-hash.c
src/json/: json_spirit_reader_template.h  json_spirit_value.h  json_spirit_writer_template.h
src/leveldb/: #build_detect_platform#  Makefile
src/leveldb/port/: atomic_pointer.h
src/m4/: bitmark_find_bdb48.m4  bitmark_qt.m4  bitmark_subdir_to_include.m4
src/qt/: Makefile.am  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitmark.cpp  bitmark.qrc  bitmarkaddressvalidator.cpp  bitmarkaddressvalidator.h  bitmarkamountfield.cpp  bitmarkamountfield.h  bitmarkgui.cpp  bitmarkgui.h  bitmarkstrings.cpp  bitmarkunits.cpp  bitmarkunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  monitoreddatamapper.cpp  monitoreddatamapper.h  notificator.cpp  (+60 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitmark_ach.ts  bitmark_af_ZA.ts  bitmark_ar.ts  bitmark_be_BY.ts  bitmark_bg.ts  bitmark_bs.ts  bitmark_ca.ts  bitmark_ca@valencia.ts  bitmark_ca_ES.ts  bitmark_cmn.ts  bitmark_cs.ts  bitmark_cy.ts  bitmark_da.ts  bitmark_de.ts  bitmark_el_GR.ts  bitmark_en.ts  bitmark_eo.ts  bitmark_es.ts  bitmark_es_CL.ts  bitmark_es_DO.ts  bitmark_es_MX.ts  bitmark_es_UY.ts  bitmark_et.ts  bitmark_eu_ES.ts  bitmark_fa.ts  bitmark_fa_IR.ts  bitmark_fi.ts  bitmark_fr.ts  bitmark_fr_CA.ts  bitmark_gl.ts  bitmark_gu_IN.ts  bitmark_he.ts  bitmark_hi_IN.ts  bitmark_hr.ts  bitmark_hu.ts  bitmark_id_ID.ts  bitmark_it.ts  bitmark_ja.ts  bitmark_ka.ts  bitmark_kk_KZ.ts  (+31 more)
src/qt/res/: bitmark-qt-res.rc
src/qt/res/icons/: bitmark.icns
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  auxpow_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  canonical_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  hmac_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  test_bitmark.cpp  transaction_tests.cpp  uint256_tests.cpp  util_tests.cpp  wallet_tests.cpp
src/test/code-validation/: emission-points.py
src/test/data/: README.md  base58_encode_decode.json  base58_keys_invalid.json  base58_keys_valid.json  script_invalid.json  script_valid.json  tx_invalid.json  tx_valid.json
src/test/fork_tests/: assert.sh  basic.sh  bitmark.conf  cem.sh  general.sh  init.sh  run_tests.sh
src/tromp/: equi.h  equi_miner.h
src/yescrypt/: yescrypt-platform.c  yescryptcommon.c
(+27 files in other folders)
